@@ -2,7 +2,7 @@ This package is derived from sources obtained at:
         http://latrace.sourceforge.net
 Debian packaging by Akos PASZTORY <akos.pasztory@gmail.com>.
 
-Copyright (c) 2008, 2009 Jiri Olsa <olsajiri@gmail.com>
+Copyright (c) 2008, 2009, 2010 Jiri Olsa <olsajiri@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
