@@ -4,7 +4,7 @@
   Taken from the libnl project and customized to fit for latrace.
   Released undder following license notice.
 
-  Copyright (C) 2008, 2009 Jiri Olsa <olsajiri@gmail.com>
+  Copyright (C) 2008, 2009, 2010 Jiri Olsa <olsajiri@gmail.com>
 
   This file is part of the latrace.
 
