@@ -2,6 +2,7 @@
 	* changed config file magic defines
 	* separate arguments display code, so it could be
 	  disabled for not supported architectures
+	* updating license info
 
 2010-07-02  Jiri Olsa <olsajiri@gmail.com>
 	* fixing output for thread applications
